# packages/server/src/features/payment/payment.controller.ts
@@ -34,7 +34,7 @@ export class PaymentController extends Controller {
   }
 
   @Get('{transactionId}')
-  @Security('jwt_auth')
+  @Security('JWT_SECRET')
   @Middlewares([authorizeRole(['ADMIN', 'MODERATOR'])])
   public async get(@Path() transactionId: string): Promise<GetPaymentResponse> {
     const payment = await this.paymentService.retrieve(+transactionId);
@@ -43,7 +43,7 @@ export class PaymentController extends Controller {
   }
 
   @Post('void')
-  @Security('jwt_auth')
+  @Security('JWT_SECRET')
   @Middlewares([authorizeRole(['ADMIN', 'MODERATOR']), validate(VoidPaymentSchema)])
   public async void(@Body() body: VoidPaymentRequest['body']) {
     const transactionId = body.transactionId;
@@ -54,7 +54,7 @@ export class PaymentController extends Controller {
   }
 
   @Post('refund')
-  @Security('jwt_auth')
+  @Security('JWT_SECRET')
   @Middlewares([authorizeRole(['ADMIN', 'MODERATOR']), validate(RefundPaymentSchema)])
   public async refund(@Body() body: RefundPaymentRequest['body']) {
     const { transactionId, amount } = body;
